<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CoCar</string>
    <string name="action_profil">Profil</string>
    <string name="action_depart">Départ</string>
    <string name="action_proposition">Proposition</string>
    <string name="action_historique">Historique</string>
    <string name="action_creerparcours">Créer Parcours</string>
    <string name="action_rechercher">Rechercher</string>
    <string name="action_apropos">À Propos</string>
    <string name="txt_nom">Nom</string>
    <string name="txt_MotDePasse">Mot de Passe</string>
    <string name="txt_NumeroTel">Numéro de Téléphone</string>
    <string name="txt_btn_enregistrer">Enregistrer</string>
    <string name="txt_btn_connexion">Connexion</string>
    <string name="txt_connexion">Connexion</string>
    <string name="txt_hint_Password">Mot de passe</string>
    <string name="txt_hint_login">Indentifiant (Email)</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="btn_Inscription">S\'inscrire</string>
    <string name="txt_Email">Email</string>
    <string name="txt_longDepart">Longitude de départ</string>
    <string name="txt_latDepart">Latitude de départ</string>
    <string name="txt_longDestination">Longitude de destination</string>
    <string name="txt_latDestination">Latitude de destination</string>
    <string name="hint_nom">Prénom et Nom</string>
    <string name="hint_Address">Votre adresse</string>
    <string name="title_activity_search" translatable="false">searchActivity</string>
    <string name="txt_create">Creer</string>
    <string name="title_Profil">Profil</string>
    <string name="title_Depart">Départ</string>
    <string name="title_Proposition">Proposition</string>
    <string name="title_Note">Évaluer un utilisateur</string>
    <string name="title_Rechercher">Créer un parcours</string>
    <string name="title_modifProfil">Modifier le profil</string>
    <string name="btn_Modif">Modifier</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Déconnexion</string>
    <string name="title_activity_base" translatable="false">BaseActivity</string>

    <string name="title_Conducteur">Vous êtes un conducteur</string>
    <string name="title_passager">Vous êtes un passager</string>

    <string name="action_example" translatable="false">Example action</string>
    <string name="title_activity_update_user" translatable="false">UpdateUserActivity</string>

    <string name="hello_world" translatable="false">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_google_map" translatable="false">googleMap</string>
</resources>
