<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_modifProfil"
            android:id="@+id/lblModifProfil"
            android:layout_marginBottom="50dp"
            android:password="false" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNom"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_nom" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtEmail"
            android:layout_marginTop="5dp"
            android:hint="@string/txt_Email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtMotDePasse"
            android:layout_marginTop="5dp"
            android:hint="@string/txt_MotDePasse" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/txtAddress"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_Address"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/txtPhone"
            android:layout_gravity="center_horizontal"
            android:hint="@string/txt_NumeroTel"
            android:layout_marginTop="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_Modif"
            android:id="@+id/btnInscription"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />

    </LinearLayout>
</LinearLayout>