<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jg.jl.tpmobile.cocar.cocar.LoginActivity"
    android:weightSum="1"
    android:id="@+id/login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_connexion"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.08"
        android:layout_marginTop="20dp" />

    <AutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_hint_login"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_hint_Password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/txt_hint_Password"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_btn_connexion"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:shadowColor="#ff00ff12"
        android:onClick="login" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/btn_Inscription"
        android:id="@+id/Inscription_button"
        android:layout_gravity="center_horizontal"
        android:onClick="inscriptionActivity" />

</LinearLayout>
