<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jg.jl.tpmobile.cocar.cocar.InscriptionActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_activity_inscription"
            android:id="@+id/lblInscription"
            android:layout_marginBottom="50dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNom"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_nom" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtEmail"
            android:layout_marginTop="5dp"
            android:hint="@string/txt_Email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtMotDePasse"
            android:layout_marginTop="5dp"
            android:hint="@string/txt_MotDePasse" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/txtLongInscrip"
            android:layout_gravity="center_horizontal"
            android:hint="Longitude"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/txtLatInscrip"
            android:layout_gravity="center_horizontal"
            android:hint="Latitude"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/txtPhone"
            android:layout_gravity="center_horizontal"
            android:hint="@string/txt_NumeroTel"
            android:layout_marginTop="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_Inscription"
            android:id="@+id/btnInscription"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:onClick="inscription" />

    </LinearLayout>

</LinearLayout>
