<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:ems="10"
        android:id="@+id/txtDepartP"
        android:layout_marginTop="5dp"
        android:hint="@string/txt_latDepart" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:ems="10"
        android:id="@+id/txtDepartP2"
        android:layout_marginTop="5dp"
        android:hint="@string/txt_longDepart" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:ems="10"
        android:id="@+id/txtDestinationP"
        android:layout_marginTop="5dp"
        android:hint="@string/txt_latDestination"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:ems="10"
        android:id="@+id/txtDestinationP2"
        android:layout_marginTop="5dp"
        android:hint="@string/txt_longDestination" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Nombre de passager (MAX 6)"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/nbPassP"
        android:numeric="integer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Date de départ"
        android:id="@+id/textView5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/dateD"
        android:inputType="date"
        android:hint="YYYY-MM-DD"
        android:labelFor="@id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Heure de départ (24H)"
        android:id="@+id/textView6" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/heureD"
        android:hint="HH:MM"
        android:labelFor="@id/textView6" />

</LinearLayout>